Bug 1476626 - styleeditor stylesheet-enabled visibility in narrow windows. r=gl
UltraBlame original commit: 8ab9f8c268fff2af8d7f638b30d55f2211424402

--- a/devtools/client/themes/styleeditor.css
+++ b/devtools/client/themes/styleeditor.css
@@ -906,38 +906,6 @@ opacity
 ;
 }
 .
-splitview
--
-nav
->
-li
->
-.
-stylesheet
--
-enabled
-:
-focus
-.
-splitview
--
-nav
->
-li
-:
-hover
->
-.
-stylesheet
--
-enabled
-{
-outline
-:
-0
-;
-}
-.
 stylesheet
 -
 linked
@@ -1279,33 +1247,9 @@ padding
 :
 0
 ;
-background
--
-position
-:
-0
-0
-;
 height
 :
 24px
-;
-}
-.
-disabled
->
-.
-stylesheet
--
-enabled
-{
-background
--
-position
-:
--
-24px
-0
 ;
 }
 .
